deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: jmeritt/nzbget
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "300Mi"
          limits:
            cpu: "300m"
            memory: "2G"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        emptyDir: {}
      - name: config-src
        configMap: 
          name: nzbget-config
      - name: downloads
        emptyDir: {}
