service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  ports:
  - port: 6789
    targetPort: 6789
  selector:
    app: nzbget
