ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nzbget.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbget
            port:
              number: 6789
